--- a/SoundWaveViewer/Base.lproj/Main.storyboard
+++ b/SoundWaveViewer/Base.lproj/Main.storyboard
@@ -63,29 +63,95 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="573"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rqn-ag-0gb">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
-                            </scrollView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8OB-Xu-A3d">
+                                <rect key="frame" x="0.0" y="20" width="375" height="411"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0fk-rH-fpd">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jie-31-LGP" customClass="SVFullWaveformItemCell" customModule="SoundWaveViewer" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CbY-dd-XIW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="CbY-dd-XIW" firstAttribute="leading" secondItem="jie-31-LGP" secondAttribute="leading" id="1iS-5M-icC"/>
+                                            <constraint firstItem="CbY-dd-XIW" firstAttribute="top" secondItem="jie-31-LGP" secondAttribute="top" id="VMp-Z7-a3T"/>
+                                            <constraint firstAttribute="bottom" secondItem="CbY-dd-XIW" secondAttribute="bottom" id="aah-au-xzg"/>
+                                            <constraint firstAttribute="trailing" secondItem="CbY-dd-XIW" secondAttribute="trailing" id="g1B-DB-OVn"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="waveformImageView" destination="CbY-dd-XIW" id="fvV-gz-K2K"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="eK3-kf-Vko" id="5A1-D6-vgf"/>
+                                    <outlet property="delegate" destination="eK3-kf-Vko" id="og6-5s-o7R"/>
+                                </connections>
+                            </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f6E-OL-tL7">
                                 <rect key="frame" x="0.0" y="439" width="375" height="134"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="134" id="DAH-Jl-BBl"/>
                                 </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SVWaveformCellIdentifier" id="7w9-SV-zhm" customClass="SVBriefWaveformCell" customModule="SoundWaveViewer" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7w9-SV-zhm" id="uB1-cC-GKe">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kvt-kK-fVr">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Kvt-kK-fVr" firstAttribute="top" secondItem="uB1-cC-GKe" secondAttribute="top" id="6lU-qc-o6o"/>
+                                                <constraint firstAttribute="bottom" secondItem="Kvt-kK-fVr" secondAttribute="bottom" id="9C6-Gr-wqL"/>
+                                                <constraint firstItem="Kvt-kK-fVr" firstAttribute="leading" secondItem="uB1-cC-GKe" secondAttribute="leading" id="Vp6-Ed-y5X"/>
+                                                <constraint firstAttribute="trailing" secondItem="Kvt-kK-fVr" secondAttribute="trailing" id="sOZ-jo-0pn"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="waveformImageView" destination="Kvt-kK-fVr" id="bMp-70-ahC"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="eK3-kf-Vko" id="ZsT-Qt-5vW"/>
+                                    <outlet property="delegate" destination="eK3-kf-Vko" id="zS8-S5-s8Y"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="f6E-OL-tL7" firstAttribute="top" secondItem="rqn-ag-0gb" secondAttribute="bottom" constant="8" id="8eg-SQ-Z0Q"/>
+                            <constraint firstItem="8OB-Xu-A3d" firstAttribute="leading" secondItem="pSf-ki-WJW" secondAttribute="leading" id="2bK-dF-myk"/>
+                            <constraint firstItem="f6E-OL-tL7" firstAttribute="top" secondItem="8OB-Xu-A3d" secondAttribute="bottom" constant="8" id="6aW-bM-H8A"/>
+                            <constraint firstItem="8OB-Xu-A3d" firstAttribute="top" secondItem="pSf-ki-WJW" secondAttribute="top" id="9Pk-JB-ImJ"/>
                             <constraint firstItem="f6E-OL-tL7" firstAttribute="leading" secondItem="yrq-Xg-qHM" secondAttribute="leading" id="Fyn-hI-kEc"/>
-                            <constraint firstAttribute="trailing" secondItem="rqn-ag-0gb" secondAttribute="trailing" id="cUw-cg-Nzm"/>
-                            <constraint firstItem="rqn-ag-0gb" firstAttribute="leading" secondItem="yrq-Xg-qHM" secondAttribute="leading" id="gKt-Xj-ebt"/>
+                            <constraint firstItem="8OB-Xu-A3d" firstAttribute="trailing" secondItem="pSf-ki-WJW" secondAttribute="trailing" id="UWk-Wx-h2T"/>
                             <constraint firstAttribute="trailing" secondItem="f6E-OL-tL7" secondAttribute="trailing" id="otK-4M-SgH"/>
                             <constraint firstAttribute="bottom" secondItem="f6E-OL-tL7" secondAttribute="bottom" id="qTG-7N-zMX"/>
-                            <constraint firstItem="rqn-ag-0gb" firstAttribute="top" secondItem="yrq-Xg-qHM" secondAttribute="top" id="xHT-Tl-8lE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pSf-ki-WJW"/>
                     </view>
+                    <connections>
+                        <outlet property="tracksView" destination="f6E-OL-tL7" id="Tt9-D0-1Hw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jep-S7-SzV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
