--- a/SoundWaveViewer/Base.lproj/Main.storyboard
+++ b/SoundWaveViewer/Base.lproj/Main.storyboard
@@ -38,26 +38,40 @@
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ga5-8r-rj7">
-                                <rect key="frame" x="214" y="20" width="149" height="54"/>
+                                <rect key="frame" x="75" y="20" width="100" height="54"/>
                                 <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="rJ4-BH-zZj"/>
                                 </constraints>
-                                <state key="normal" title="Load Demo (4 tracks)"/>
+                                <state key="normal" title="Demo 4 tracks"/>
                                 <connections>
-                                    <action selector="loadDemoTrackPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bxx-H3-uVR"/>
+                                    <action selector="demo4TrackPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bxx-H3-uVR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Euz-UJ-DWV">
+                                <rect key="frame" x="183" y="20" width="107" height="54"/>
+                                <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="sMP-Wc-Tev"/>
+                                </constraints>
+                                <state key="normal" title="Demo 13 tracks"/>
+                                <connections>
+                                    <action selector="demo13TracksPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Euc-6m-EBx"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Euz-UJ-DWV" firstAttribute="leading" secondItem="ga5-8r-rj7" secondAttribute="trailing" constant="8" id="9SF-69-cZk"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EnM-n6-3WF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Euz-UJ-DWV" secondAttribute="trailing" id="J4u-sl-2JX"/>
                             <constraint firstItem="gDt-2N-nR0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="WPx-ff-5g7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ga5-8r-rj7" secondAttribute="trailing" constant="12" id="hm7-fT-6Ic"/>
                             <constraint firstItem="ga5-8r-rj7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hnB-Wp-ZDC"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="top" secondItem="gDt-2N-nR0" secondAttribute="bottom" constant="20" id="hxp-9P-oq9"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ivy-MI-Tuc"/>
                             <constraint firstItem="gDt-2N-nR0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jxs-rh-jah"/>
+                            <constraint firstItem="ga5-8r-rj7" firstAttribute="leading" secondItem="gDt-2N-nR0" secondAttribute="trailing" constant="10" id="neO-EX-eV5"/>
+                            <constraint firstItem="Euz-UJ-DWV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="sI8-rY-fZG"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zx3-0b-FXM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
