--- a/SoundWaveViewer/Base.lproj/Main.storyboard
+++ b/SoundWaveViewer/Base.lproj/Main.storyboard
@@ -20,7 +20,6 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDt-2N-nR0">
                                 <rect key="frame" x="8" y="20" width="57" height="54"/>
-                                <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <accessibility key="accessibilityConfiguration" label="dd"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="57" id="UOh-9Y-YLf"/>
@@ -37,41 +36,14 @@
                                     <segue destination="eK3-kf-Vko" kind="embed" id="8JU-ab-3Gd"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ga5-8r-rj7">
-                                <rect key="frame" x="75" y="20" width="100" height="54"/>
-                                <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="rJ4-BH-zZj"/>
-                                </constraints>
-                                <state key="normal" title="Demo 4 tracks"/>
-                                <connections>
-                                    <action selector="demo4TrackPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bxx-H3-uVR"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Euz-UJ-DWV">
-                                <rect key="frame" x="183" y="20" width="107" height="54"/>
-                                <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="sMP-Wc-Tev"/>
-                                </constraints>
-                                <state key="normal" title="Demo 13 tracks"/>
-                                <connections>
-                                    <action selector="demo13TracksPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Euc-6m-EBx"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Euz-UJ-DWV" firstAttribute="leading" secondItem="ga5-8r-rj7" secondAttribute="trailing" constant="8" id="9SF-69-cZk"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EnM-n6-3WF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Euz-UJ-DWV" secondAttribute="trailing" id="J4u-sl-2JX"/>
                             <constraint firstItem="gDt-2N-nR0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="WPx-ff-5g7"/>
-                            <constraint firstItem="ga5-8r-rj7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hnB-Wp-ZDC"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="top" secondItem="gDt-2N-nR0" secondAttribute="bottom" constant="20" id="hxp-9P-oq9"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ivy-MI-Tuc"/>
                             <constraint firstItem="gDt-2N-nR0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jxs-rh-jah"/>
-                            <constraint firstItem="ga5-8r-rj7" firstAttribute="leading" secondItem="gDt-2N-nR0" secondAttribute="trailing" constant="10" id="neO-EX-eV5"/>
-                            <constraint firstItem="Euz-UJ-DWV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="sI8-rY-fZG"/>
                             <constraint firstItem="rH4-ki-8IK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zx3-0b-FXM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -89,8 +61,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="573"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8OB-Xu-A3d">
-                                <rect key="frame" x="0.0" y="20" width="375" height="411"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8OB-Xu-A3d">
+                                <rect key="frame" x="0.0" y="20" width="375" height="369"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0fk-rH-fpd">
                                     <size key="itemSize" width="50" height="50"/>
@@ -129,7 +101,7 @@
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="51" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f6E-OL-tL7">
                                 <rect key="frame" x="0.0" y="439" width="375" height="134"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="134" id="DAH-Jl-BBl"/>
                                 </constraints>
@@ -162,21 +134,41 @@
                                     <outlet property="delegate" destination="eK3-kf-Vko" id="zS8-S5-s8Y"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fwn-ee-LRk">
+                                <rect key="frame" x="186.5" y="20" width="1" height="369"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="0.5" id="tjB-7G-OyB"/>
+                                </constraints>
+                            </view>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="lki-O3-GPO">
-                                <rect key="frame" x="177" y="286.5" width="20" height="20"/>
+                                <rect key="frame" x="177" y="194.5" width="20" height="20"/>
                             </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xSj-ry-bmx">
+                                <rect key="frame" x="157" y="401" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="wcG-So-vfa"/>
+                                </constraints>
+                                <state key="normal" title="Play"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="8OB-Xu-A3d" firstAttribute="leading" secondItem="pSf-ki-WJW" secondAttribute="leading" id="2bK-dF-myk"/>
-                            <constraint firstItem="f6E-OL-tL7" firstAttribute="top" secondItem="8OB-Xu-A3d" secondAttribute="bottom" constant="8" id="6aW-bM-H8A"/>
+                            <constraint firstItem="f6E-OL-tL7" firstAttribute="top" secondItem="xSj-ry-bmx" secondAttribute="bottom" constant="8" id="6GI-SG-cJ2"/>
+                            <constraint firstItem="f6E-OL-tL7" firstAttribute="top" secondItem="8OB-Xu-A3d" secondAttribute="bottom" constant="50" id="6aW-bM-H8A"/>
                             <constraint firstItem="8OB-Xu-A3d" firstAttribute="top" secondItem="pSf-ki-WJW" secondAttribute="top" id="9Pk-JB-ImJ"/>
+                            <constraint firstItem="lki-O3-GPO" firstAttribute="centerX" secondItem="8OB-Xu-A3d" secondAttribute="centerX" id="CaJ-sq-b88"/>
+                            <constraint firstItem="fwn-ee-LRk" firstAttribute="height" secondItem="8OB-Xu-A3d" secondAttribute="height" id="Es8-iY-qtV"/>
                             <constraint firstItem="f6E-OL-tL7" firstAttribute="leading" secondItem="yrq-Xg-qHM" secondAttribute="leading" id="Fyn-hI-kEc"/>
-                            <constraint firstItem="lki-O3-GPO" firstAttribute="centerX" secondItem="pSf-ki-WJW" secondAttribute="centerX" id="PRe-hh-ptl"/>
-                            <constraint firstItem="lki-O3-GPO" firstAttribute="centerY" secondItem="pSf-ki-WJW" secondAttribute="centerY" id="R5j-E9-58D"/>
+                            <constraint firstItem="xSj-ry-bmx" firstAttribute="centerX" secondItem="pSf-ki-WJW" secondAttribute="centerX" id="QQT-4D-v3m"/>
                             <constraint firstItem="8OB-Xu-A3d" firstAttribute="trailing" secondItem="pSf-ki-WJW" secondAttribute="trailing" id="UWk-Wx-h2T"/>
+                            <constraint firstItem="fwn-ee-LRk" firstAttribute="centerX" secondItem="8OB-Xu-A3d" secondAttribute="centerX" id="X2h-if-6LM"/>
+                            <constraint firstItem="lki-O3-GPO" firstAttribute="centerY" secondItem="8OB-Xu-A3d" secondAttribute="centerY" id="Z2L-sd-cqz"/>
                             <constraint firstAttribute="trailing" secondItem="f6E-OL-tL7" secondAttribute="trailing" id="otK-4M-SgH"/>
                             <constraint firstAttribute="bottom" secondItem="f6E-OL-tL7" secondAttribute="bottom" id="qTG-7N-zMX"/>
+                            <constraint firstItem="fwn-ee-LRk" firstAttribute="centerY" secondItem="8OB-Xu-A3d" secondAttribute="centerY" id="uC5-e3-PfN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pSf-ki-WJW"/>
                     </view>
